--- a/WebApi/webapi.service
+++ b/WebApi/webapi.service
@@ -2,8 +2,8 @@
 Description=Example .NET Web API App running on CentOs 8
 
 [Service]
-WorkingDirectory=/var/www/myapp
-ExecStart=/usr/bin/dotnet /var/www/myapp/myapp.dll
+WorkingDirectory=/var/www/webapi
+ExecStart=/usr/bin/dotnet /var/www/webapi/WebApi.dll
 Restart=always
 # Restart service after 10 seconds if the dotnet service crashes:
 RestartSec=10
