--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\GameCore\GameCore.csproj" />
     <ProjectReference Include="..\GameDigger\GameDigger.csproj" />
+    <ProjectReference Include="..\GameSnake\GameSnake.csproj" />
   </ItemGroup>
 
   <ItemGroup>
