--- a/WinFormsGameView/WinFormsGameView.csproj
+++ b/WinFormsGameView/WinFormsGameView.csproj
@@ -36,6 +36,7 @@
     <ProjectReference Include="..\GameCore\GameCore.csproj" />
     <ProjectReference Include="..\GameDigger\GameDigger.csproj" />
     <ProjectReference Include="..\GameSnake\GameSnake.csproj" />
+    <ProjectReference Include="..\SnakeGame2\SnakeGame2.csproj" />
   </ItemGroup>
 
   <ItemGroup>
