Snake dead with wall

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\GameCore\GameCore.csproj" />
     <ProjectReference Include="..\GameDigger\GameDigger.csproj" />
     <ProjectReference Include="..\GameSnake\GameSnake.csproj" />
+    <ProjectReference Include="..\SnakeGame2\SnakeGame2.csproj" />
   </ItemGroup>
 
   <ItemGroup>
