--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=Data/SqLiteDb/SnakeArena.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
