--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -2,12 +2,23 @@
   "ConnectionStrings": {
     "DefaultConnection": "Filename=DataSource/SqLiteDb/SnakeArena.sqlite"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://85.193.88.113:5341/",
+          "apiKey": "<From Enviroment Variables>"
+        }
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
